--- a/HW22-21.html
+++ b/HW22-21.html
@@ -59,21 +59,23 @@
         let myFile = document.getElementById("myFile");
         let preview = document.getElementById("preview");
         let remove = document.getElementById("remove");
-
+        let checkArr = [];
+        
         // 2. 對myFile物件註冊change事件 - 改變選擇的檔案時觸發
         myFile.addEventListener("change", function (e) {
           // 取得檔案物件的兩種方式
           // 1. 直接從myFile物件上取得檔案物件 (因為非同步，一樣，多個classname註冊時會有問題)
-
+          
           // 2. 從event物件中取得他的soure target，也就是myFile物件，再取得檔案物件
           let files = e.target.files;
           // 檔案的基本資訊，包括：檔案的名稱、大小與文件型態
-          if (files !== null) {
+          if (files !== null && checkArr.indexOf(e.target.value)===-1) {
+            //file不為空值且checkArr找不到才新增
+            checkArr.push(e.target.value);
             // 判斷files物件是否存在
             for (let i = 0; i < files.length; i++) {
               let file = files[i];
               let filename = file.name;
-              console.log(filename);
               // 取出files物件的第一個
               if (file.type.indexOf("image") > -1) {
                 // 判斷file.type的型別是否包含'image'
@@ -87,13 +89,16 @@
                   let img = document.createElement("img");
                   let label = document.createElement("label");
                   let input = document.createElement("input");
+                  let div = document.createElement("div");
                   // 新增img元素
                   img.src = result;
                   // 賦予src屬性
                   label.append(input);
                   label.setAttribute("id", filename);
                   input.setAttribute("type", "checkbox");
-                  label.append(img);
+                  div.append(img);
+                  label.append(input);
+                  label.append(div);
                   preview.append(label);
                   // 放到div裡面
                   remove.addEventListener("click", function (e) {
@@ -106,12 +111,14 @@
                     for (let j = 0; j < label.length; j++) {
                       if (checkbox[j].checked === true) {
                         label[j].remove();
+                        checkArr.pop(label.values);
                       }
                     }
                   });
                 });
                 reader.readAsDataURL(file);
                 // 使用FileReader物件上的 readAsDataURL(file) 的方法，傳入要讀取的檔案，並開始進行讀取
+                e.target.value = "";
               } else {
                 alert("請上傳圖片!");
                 // 彈出警告視窗 alert('請上傳圖片！');
