--- a/HW22-21.html
+++ b/HW22-21.html
@@ -33,10 +33,9 @@
       input[type="checkbox"] {
         margin-top: 50 auto;
       }
-      #preview{
+      #preview {
         width: 200px;
       }
-
     </style>
   </head>
   <body>
@@ -72,10 +71,11 @@
 
           // 2. 從event物件中取得他的soure target，也就是myFile物件，再取得檔案物件
           let files = e.target.files;
+          let name = e.target.value.split("\\")[2];
           // 檔案的基本資訊，包括：檔案的名稱、大小與文件型態
-          if (files !== null && checkArr.indexOf(e.target.value) === -1) {
+          if (files !== null && checkArr.indexOf(name) === -1) {
             //file不為空值且checkArr找不到才新增
-            checkArr.push(e.target.value);
+            checkArr.push(name);
             // 判斷files物件是否存在
             for (let i = 0; i < files.length; i++) {
               let file = files[i];
@@ -105,21 +105,25 @@
                   label.append(div);
                   preview.append(label);
                   // 放到div裡面
-                  remove.addEventListener("click", function (e) {
-                    let label = document
-                      .getElementById("preview")
-                      .querySelectorAll("label");
-                    let checkbox = document
-                      .getElementById("preview")
-                      .querySelectorAll("input");
-                    for (let j = 0; j < label.length; j++) {
-                      if (checkbox[j].checked === true) {
-                        label[j].remove();
-                        checkArr.splice(j, 1); //刪除checkArr裡的file暫存
-                      }
-                    }
-                  });
                 });
+
+                remove.addEventListener("click", function (e) {
+                  let label = document
+                    .getElementById("preview")
+                    .querySelectorAll("label");
+
+                  let checkbox = document
+                    .getElementById("preview")
+                    .querySelectorAll("input");
+
+                  for (let j = 0; j < label.length; j++) {
+                    if (checkbox[j].checked === true) {
+                      label[j].remove();
+                      checkArr.splice(checkArr.indexOf(label[j].id), 1); //刪除checkArr裡的file暫存
+                    }
+                  }
+                });
+                console.log(checkArr);
                 reader.readAsDataURL(file);
                 // 使用FileReader物件上的 readAsDataURL(file) 的方法，傳入要讀取的檔案，並開始進行讀取
                 e.target.value = "";
