--- a/HW22-21.html
+++ b/HW22-21.html
@@ -34,7 +34,8 @@
         margin-top: 50 auto;
       }
       #preview {
-        width: 200px;
+        width: 600px;
+        display: flex;
       }
     </style>
   </head>
